{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 22,
  "lineage": "8b539966-c81e-d56d-b46c-5365be9f3dee",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-03T22:35:38.879-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/avid-phoenix-464816-f4/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/custom-vpc",
            "priority": 1000,
            "project": "avid-phoenix-464816-f4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-03T22:35:38.849-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/avid-phoenix-464816-f4/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/custom-vpc",
            "priority": 1000,
            "project": "avid-phoenix-464816-f4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250610",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/zones/europe-west1-b/disks/web-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-07-03T22:36:02.413-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/avid-phoenix-464816-f4/zones/europe-west1-b/instances/web-vm",
            "instance_id": "1485615330893682349",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDFGdBRVCrlMUq+ooSPrjhTi9WOT3LzJlAVmYkqXrAI8kqvzHWdFRioBh/tcgf/u6kURTHvC+zcFv8q4GoovUf4aGR9FTGVWNaxKCqBppvxTmddixsNtAEg/t/bNpckoBjmUVH+jOuNlmIbp078XbW4No8NqQffaUR5PIKIAqC04Wp6K7Nv9EIiXlbRKDwyP0RQClKkzJNb3EcO856wYaJCI/RS0DZfD/XxvFVZct1dzScTMK1e8R13m/inQ2Iaqle6V8+E7FkOSrQEDjsFOTNY7WnooAQq0+c/6tfikV+m6jZppVSZLY4LLQS9hRm3LIO5Lc/opGwq8dDtNDnOIWYYkaVYaW2sZRnRz2xR+nfqtXoorzBpuFRIbis7VByv/pyzonsiWlczeF7b8X3FPRK0jKx0PeNoGTPhSRp+5orGHO [...]
            },
            "metadata_fingerprint": "p_g5dCULtlg=",
            "name": "web-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.205.18.235",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/custom-vpc",
                "network_ip": "10.10.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/subnet-europe",
                "subnetwork_project": "avid-phoenix-464816-f4"
              }
            ],
            "project": "avid-phoenix-464816-f4",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/zones/europe-west1-b/instances/web-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet_eu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/avid-phoenix-464816-f4/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "7606202181645686513",
            "numeric_id": "7606202181645686513",
            "project": "avid-phoenix-464816-f4",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/custom-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-03T22:35:39.093-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.0.1",
            "id": "projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/subnet-europe",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "subnet-europe",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "avid-phoenix-464816-f4",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/regions/europe-west1/subnetworks/subnet-europe",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 93351374943344324
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_us",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-03T22:35:39.321-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.20.0.1",
            "id": "projects/avid-phoenix-464816-f4/regions/us-central1/subnetworks/subnet-us",
            "ip_cidr_range": "10.20.0.0/24",
            "name": "subnet-us",
            "network": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "avid-phoenix-464816-f4",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/avid-phoenix-464816-f4/regions/us-central1/subnetworks/subnet-us",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6090714153684227780
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}